taass/backupProgetto/kubernetes/kubernetes/api-gateway/api-gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://webui.mymusicspace.it:30010/"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS, DELETE"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,X-CustomHeader,X-LANG,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,X-Api-Key,X-Device-Id,Access-Control-Allow-Origin"
  
  name: api-gateway-service-ingress
spec:
  rules:
    - host: api.mymusicspace.it
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:  
              service:
                name: api-gateway-service
                port:
                  number: 8080
